# ticktok-python

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
.circleci/: config.yml
.github/workflows/: build-and-test.yml  publish-to-pypi.yml  ticktok_health_check.sh
tests/: test_client.py  test_register.py  test_tick.py  ticktok_server.py
ticktok/: __init__.py  client.py  core.py  http_session.py  server.py  ticks.py
